<resources>
    <string name="app_name">FME</string>
    <string name="depart">Department of freshman engineering R20 regulation 1 semester</string>
    <string name="cse">computer science and engineering</string>
    <string name="cseai">cse(ai)</string>
    <string name="cseds">cse(ds)</string>
    <string name="ece">eletronics and communication engineering</string>
    <string name="eee">electrical and eletronic engineering</string>
    <string name="civil">civil engineering</string>
    <string name="mech">mechanical engineering</string>
    <string name="sem1">semester 1</string>
    <string name="sem2">semester 2</string>
    <string name="CNT">calculus and numerical techniques</string>
    <string name="phy">applied physics</string>
    <string name="bee">basic electrical engineering</string>
    <string name="c">problem solving and c programming</string>
    <string name="graphics">engineering graphics</string>
    <string name="physicslab">physics lab</string>
    <string name="clab">c programming lab</string>
    <string name="work">engineering workshop</string>
    <string name="appliedchemistry">applied chemistry</string>
    <string name="english">english for engineers</string>
    <string name="dms">discrete mathematical structure</string>
    <string name="eng_lab">english lab</string>
    <string name="chem_lab">chemistry lab</string>
    <string name="ds">introduction to data science</string>
    <string name="bme">basic mechanical engineering</string>
    <string name="bce">basic civil engineering</string>
    <string name="eng_phy">engineering physics</string>
    <string name="civil_eng">introduction to civil engineering</string>
    <string name="beee">Basic electrical and electronic engineering</string>
    <string name="sy1">Syllabus</string>
    <string name="course">Course Content</string>
    <string name="pp">Power Point</string>
    <string name="videos">Videos</string>
    <string name="qb">Question Bank</string>
    <string name="pq">Previous Question</string>
    <string name="eb">E-Books</string>
    <string name="todo">happy</string>
    <string name="th">Theory</string>
    <string name="lb">Labs</string>
    <string name="itmt">Integral transforms and Matrix theory</string>
    <string name="bmce">Basic mechanical and civil engineering</string>
    <string name="dss">Data structures</string>
    <string name="dsl">Data structures Lab</string>
    <string name="lara">Linear algebra and regression analysis</string>
    <string name="p">Python programming</string>
    <string name="pl">Python programming Lab</string>
    <string name="mfds">Mathematical foundations for data science </string>
    <string name="ms">Modern physics</string>
    <string name="ct">circuit theory</string>
    <string name="ec">Engineering chemistry</string>
    <string name="em">Engineering mechanics</string>

</resources>