<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".ai_sem1" android:orientation="vertical">

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="#FBBCBD"
            android:capitalize="words"
            android:gravity="center|center_horizontal|top|center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingLeft="10sp"
            android:text="@string/depart"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />
        <ScrollView android:layout_marginTop="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/scrollView">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/b1"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius"
                    android:shadowRadius="10"
                    android:text="@string/cse"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_200" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius1"
                    android:text="@string/cseai"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/b3"
                    android:layout_width="351dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius2"
                    android:text="@string/cseds"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/b4"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius3"
                    android:text="@string/ece"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/b5"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius4"
                    android:text="@string/eee"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/b6"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius5"
                    android:text="@string/civil"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/b7"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius6"
                    android:text="@string/mech"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>