<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".ai_sem1" android:orientation="vertical">

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="#A45A2929"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:paddingLeft="10sp"
            android:text="@string/depart"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:capitalize="none"
                    android:gravity="center_vertical"
                    android:paddingLeft="10sp"
                    android:text="threory"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b1"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius1"
                    android:shadowRadius="10"
                    android:text="@string/CNT"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius4"
                    android:text="@string/phy"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/b3"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius"
                    android:shadowRadius="10"
                    android:text="@string/bee"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_200" />

                <Button
                    android:id="@+id/b4"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius5"
                    android:shadowRadius="10"
                    android:text="@string/c"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_200" />

                <Button
                    android:id="@+id/b5"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius2"
                    android:shadowRadius="10"
                    android:text="@string/graphics"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_200" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="TextView" />

                <Button
                    android:id="@+id/b6"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius6"
                    android:shadowRadius="10"
                    android:text="@string/physicslab"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_200" />

                <Button
                    android:id="@+id/b7"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius4"
                    android:shadowRadius="10"
                    android:text="@string/clab"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_200" />

                <Button
                    android:id="@+id/b8"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/radius1"
                    android:shadowRadius="10"
                    android:text="@string/work"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_200" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
